updated template types and grid view in search interface UI

--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -239,6 +239,7 @@
                         z-index: 1;
                         transition: 0.4s all ease;
                         position: relative;
+                        margin-bottom: 30px;
                         .customize-button{
                             position: absolute;
                             right: 0;
