--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -47,7 +47,7 @@
 .search-background-div{
     width: 100%;
     height: calc(100% - 20px);
-    background: #ffffff;
+    /* background: #ffffff; */
     position: absolute;
     top: 63px;
     border: 0;
