--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -210,14 +210,14 @@
       <div class="table-data-content col-6" *ngIf="!experiments.length">
           <div class="content-sec active_experments">
            <div class="title-sec d-flex justify-content-between">
-             <div class="title">Active Experiments</div> </div>
+             <div class="title">Active Experiment</div> </div>
               <div class="img-block center-image" (click) = "openExp()"><img src="assets/icons/overview/no-experiments.svg"></div>
           </div>
       </div>
       <div class="table-data-content col-6" *ngIf="experiments.length">
         <div class="content-sec active_experments">
           <div class="title-sec d-flex justify-content-between">
-            <div class="title">Active Experiments</div> 
+            <div class="title">Active Experiment</div> 
             <div class="create_new_link" (click)="openExp()">+ Create New</div>
           </div>    
           <div class="header-data row m-0">
