--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -268,9 +268,20 @@
     .text-center{
         text-align: center!important;
     }
+    .slider-sec{
+        .span00{
+            font-size: 12px;
+            color: #9AA0A6;
+            margin: 1px 0px 0px 80px;
+        }
+        .span24{
+            font-size: 12px;
+            color: #9AA0A6;
+        }
+    }
     ::ng-deep .ng5-slider{
         width: 50%;
-        margin: 1px 0px 0px 85px;
+        margin: 1px 10px 0px 10px;
         .ng5-slider-pointer{
             background: #FFFFFF;
             border: 1px solid #0D6EFD;
