--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -23,13 +23,128 @@
             <div>
                 <div class="table_data_content" *ngIf="filelds && filelds.length">
                     <div class="table_header row m-0">
-                        <div class="col-2 title">Field Name</div>
-                        <div class="col-2 title">Type</div>
-                        <div class="col-2 title">Multi-Value</div>
-                        <div class="col-2 title">Required</div>
-                        <div class="col-2 title">Stored</div>
-                        <div class="col-1 title">Indexed</div>
-                        <div class="col-1 title"></div>
+                        <div class="col_ col-2 title d-flex align-items-center"  (click)="sortBy('fieldName')">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img [ngClass]="getSortIconVisibility('fieldName', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                                <img [ngClass]="getSortIconVisibility('fieldName', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                              </span>
+                            Field Name</div>
+                        <div class="col_  col-2 title d-flex align-items-center" (click)="sortBy('fieldDataType')">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img [ngClass]="getSortIconVisibility('fieldDataType', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                                <img [ngClass]="getSortIconVisibility('fieldDataType', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                              </span>
+                            Type 
+                            <div class=" ml-2 kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'"
+                            [autoClose]="true" [placement]="'bottom-right'">
+                            <div class="dropdown dropdown-open">
+                              <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">
+                         
+                                <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
+                              </button>
+                              <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
+                                <li (click)="sourceFilter.close();filterTable('all','fieldDataType')"><span class="list-name">All</span><img
+                                    [ngClass]="{'hide': filterSystem.typefilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
+                                <li *ngFor="let fieldDataType of fieldDataTypeArr" (click)="sourceFilter.close();filterTable(fieldDataType,'fieldDataType')">
+                                  <span
+                                    class="list-name">{{fieldDataType | translate}}</span><img
+                                    [ngClass]="{'hide': filterSystem.typefilter !== fieldDataType}" src="assets/icons/check-blue.svg"></li>
+                              </ul>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="col_  col-2 title d-flex align-items-center"  (click)="sortBy('isMultiValued')">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img [ngClass]="getSortIconVisibility('isMultiValued', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                                <img [ngClass]="getSortIconVisibility('isMultiValued', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                              </span>
+                            Multi-Value
+                            <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #selectFilter="ngbDropdown" ngbDropdown [container]="'body'"
+                            [autoClose]="true" [placement]="'bottom-right'">
+                            <div class="dropdown dropdown-open">
+                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">
+                                    <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
+                                </button>
+                                <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
+                                    <li (click)="selectFilter.close();filterTable('all','isMultiValued')"><span class="list-name">All</span><img
+                                            [ngClass]="{'hide': filterSystem.isMultiValuedFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
+                                    <li *ngFor="let docType of isMultiValuedArr" (click)="selectFilter.close();filterTable(docType,'isMultiValued')">
+                                        <span
+                                            class="list-name">{{docType == false ? 'No' :(docType == true? 'Yes': '')}}</span><img
+                                            [ngClass]="{'hide': filterSystem.isMultiValuedFilter !== docType}" src="assets/icons/check-blue.svg"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="col_  col-2 title d-flex align-items-center"  (click)="sortBy('isRequired')">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img [ngClass]="getSortIconVisibility('isRequired', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                                <img [ngClass]="getSortIconVisibility('isRequired', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                              </span>
+                            Required
+                            <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #isRequiredFilter="ngbDropdown" ngbDropdown [container]="'body'"
+                            [autoClose]="true" [placement]="'bottom-right'">
+                            <div class="dropdown dropdown-open">
+                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">
+                                    <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
+                                </button>
+                                <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
+                                    <li (click)="isRequiredFilter.close();filterTable('all','isRequired')"><span class="list-name">All</span><img
+                                            [ngClass]="{'hide': filterSystem.isRequiredFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
+                                    <li *ngFor="let docType of isRequiredArr" (click)="isRequiredFilter.close();filterTable(docType,'isRequired')">
+                                        <span
+                                            class="list-name">{{docType == false ? 'No' :(docType == true? 'Yes': '')}}</span><img
+                                            [ngClass]="{'hide': filterSystem.isRequiredFilter !== docType}" src="assets/icons/check-blue.svg"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="col_  col-2 title d-flex align-items-center"  (click)="sortBy('isStored')">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img [ngClass]="getSortIconVisibility('isStored', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                                <img [ngClass]="getSortIconVisibility('isStored', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                              </span>
+                            Stored
+                            <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #isStoredFilter="ngbDropdown" ngbDropdown [container]="'body'"
+                            [autoClose]="true" [placement]="'bottom-right'">
+                            <div class="dropdown dropdown-open">
+                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">
+                                    <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
+                                </button>
+                                <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
+                                    <li (click)="isStoredFilter.close();filterTable('all','isStored')"><span class="list-name">All</span><img
+                                            [ngClass]="{'hide': filterSystem.isStoredFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
+                                    <li *ngFor="let docType of isStoredArr" (click)="isStoredFilter.close();filterTable(docType,'isStored')">
+                                        <span
+                                            class="list-name">{{docType == false ? 'No' :(docType == true? 'Yes': '')}}</span><img
+                                            [ngClass]="{'hide': filterSystem.isStoredFilter !== docType}" src="assets/icons/check-blue.svg"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="col_  col-2 title d-flex align-items-center"  (click)="sortBy('isIndexed')">
+                            <span class="d-flex align-items-center flex-column mr-1">
+                                <img [ngClass]="getSortIconVisibility('isIndexed', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                                <img [ngClass]="getSortIconVisibility('isIndexed', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                              </span>
+                            Indexed
+                            <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #isIndexedFilter="ngbDropdown" ngbDropdown [container]="'body'"
+                            [autoClose]="true" [placement]="'bottom-right'">
+                            <div class="dropdown dropdown-open">
+                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">
+                                    <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
+                                </button>
+                                <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
+                                    <li (click)="isIndexedFilter.close();filterTable('all','isIndexed')"><span class="list-name">All</span><img
+                                            [ngClass]="{'hide': filterSystem.isIndexedFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
+                                    <li *ngFor="let docType of isIndexedArr" (click)="isIndexedFilter.close();filterTable(docType,'isIndexed')">
+                                        <span
+                                            class="list-name">{{docType == false ? 'No' :(docType == true? 'Yes': '')}}</span><img
+                                            [ngClass]="{'hide': filterSystem.isIndexedFilter !== docType}" src="assets/icons/check-blue.svg"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                     <perfect-scrollbar class="table_body_content">
                         <div class="table_body row m-0" *ngFor="let field of filelds | fieldsFilter: [ searchFields, 'fieldName']">
@@ -38,11 +153,13 @@
                             <div class="col-2 title">{{field.isMultiValued?'Yes':'No'}}</div>
                             <div class="col-2 title">{{field.isRequired?'Yes':'No'}}</div>
                             <div class="col-2 title">{{field.isStored?'Yes':'No'}}</div>
-                            <div class="col-1 title">{{field.isIndexed?'Yes':'No'}}</div>
-                            <div class="col-1 action_links text-right">
-                                <img src="assets/images/edit-pencil.svg" (click)="addEditFiled(field)">
-                                <img src="assets/icons/delete-table.svg" class="ml-3" (click)="deleteFieldPop(field)">
+                            <div class="col-2 title">{{field.isIndexed?'Yes':'No'}}
+                                <div class=" action_links text-right">
+                                    <img src="assets/images/edit-pencil.svg" (click)="addEditFiled(field)">
+                                    <img src="assets/icons/delete-table.svg" class="ml-3" (click)="deleteFieldPop(field)">
+                                </div>
                             </div>
+                           
                         </div>
                         <div class="divBlockEmptylastChild text-center">         
                             <div class="desc">No search results found</div>
