--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -91,6 +91,29 @@
                     text-transform: uppercase;
                     color: #9AA0A6;
                 }
+                .col_{
+                    font-weight: 500;                       
+                    color: #9AA0A6;
+                    font-size: 12px;   
+                    cursor: pointer;         
+                    .sortImg{                                                       
+                        position: static;
+                        &.upArrow {
+                            transform: none !important;
+                        }
+                        &.downArrow {
+                            transform: rotate(180deg) !important;
+                            top: -1px !important;
+                            position: relative;
+                        }
+                        &.assending{
+                            transform: rotate(180deg);
+                        }
+                        &.decending{
+                            transform: rotate(0deg);
+                        }
+                    }            
+                }
             }
             .table_body_content{
                 height: calc(100vh - 183px);
