--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -1,6 +1,9 @@
 @import './../../../app/scss/variables/variables.scss';
 .faqmain-container{
     // position: relative;
+    .empty-scroll{
+        height: calc(100vh - 162px);
+    }
     .cursor-pointer {
         cursor: pointer;
     }
