--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -21,6 +21,10 @@
 }
 
 .faqmain-container{
+    .blur-content{
+        opacity: 0.6;
+        pointer-events: none;
+    }
     .cursor-pointer {
         cursor: pointer;
     }
