Stop words UI Fix.

--- a/findly-builder/src/app/components/stop-words/stop-words.component.scss
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.scss
@@ -251,3 +251,7 @@
         display: none !important;
     }
 }
+
+.kr-sg-dropdowns.exportdropdown .dropdown-open .dropdown-input::before{
+    background-image: unset;
+}
